<resources>
    <string name="app_name">traffic safety</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">로그인시 표현 위치</string>
    <string name="nav_header_subtitle">연락처?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>

    <string name="menu_main">메인으로</string>
    <string name="menu_function1">사고대처 방법</string>
    <string name="menu_function2">응급처치 영상</string>
    <string name="menu_function3">자동차 법률사이트</string>
    <string name="menu_function4">길 찾기</string>
</resources>