<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_login"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_function1_login"
            android:icon="@drawable/ic_menu_function1"
            android:title="@string/menu_function1" />
        <item
            android:id="@+id/nav_function2_login"
            android:icon="@drawable/ic_menu_function2"
            android:title="@string/menu_function2" />
        <item
            android:id="@+id/nav_function3_login"
            android:icon="@drawable/ic_menu_function3"
            android:title="@string/menu_function3" />
        <item
            android:id="@+id/nav_function4_login"
            android:icon="@drawable/ic_menu_function4"
            android:title="@string/menu_function4" />
    </group>
</menu>