<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:padding="2dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_marginRight="3dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="보험사 :"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_login_company"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:text="입력company"
                    android:textAlignment="viewEnd"
                    android:textColor="#000000" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="아이디 :"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_login_id"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="입력id"
                    android:textAlignment="viewEnd"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="이름 :"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_login_name"
                    android:layout_width="114dp"
                    android:layout_height="20dp"
                    android:text="입력name"
                    android:textAlignment="viewEnd"
                    android:textColor="#000000" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="230dp"
        android:layout_height="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/nav_header_subtitle"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_tell"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="90dp"
            android:text="전화"
            android:background="@drawable/rd_bt_background_line_b"
            android:textColor="#000000"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>